ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.mydomain.com
    http:
      paths:
        - path: /myservice1
          pathType: Prefix
          backend:
            service:
              name: app-v1
              port: 
                number: 8080

  - host: app2.mydomain.com
    http:
      paths:
        - path: /myservice2
          pathType: Prefix
          backend:
            service:
              name: api-server-svc
              port: 
                number: 9090

  #- http:
  #    paths:
  #    - path: /test
  #      pathType: Prefix
  #      backend:
  #        service:
  #          name: app-v1
  #          port:
  #            number: 8080
